# pyinno_gen

./: README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yaml
pyinno_gen/: pyinno_gen.py
pyinno_gen/test/: generated.iss  template.iss  test_tempalte.py
