[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/its-me-abi/pyinno_gen"

[project]
name = "pyinno_gen"
version = "0.0.10"
description = "module for programmatically generating iss file from jinja template"
authors = [
	{ name = "keralaboy", email = "keralaboypypi@keralaboy.anonaddy.com" }
    ]
readme = "README.md"
license =  "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = [   "compiler", "inno setup" , "exe", "installer" ,"generate",".iss"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

requires-python = ">=3.6"
dependencies = ["Jinja2"]

[tool.setuptools]
packages = ["pyinno_gen"]
include-package-data = true

[tool.setuptools.package-data]
"pyinno_gen" = ["test/**/*"]